--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -13,3 +13,11 @@ user2:
   postcode: 0000000
   address: 沖縄
   introduction: なんくるないさ。
+
+user3:
+  email: user3@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  name: user3
+  postcode: 0000000
+  address: NY
+  introduction: ワサップ？
