--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,7 @@
 #
 default: &default
   adapter: postgresql
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
