本番環境パスワードを環境変数に変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,4 +24,4 @@ production:
   <<: *default
   database: rails_lesson_production
   username: deploy
-  password: deploy
+  password: <%= ENV['RAILS_LESSON_PASSWORD'] %>
