--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,9 +71,9 @@ jobs:
           name: Database setup
           command: bin/rails db:schema:load
 
-      - run:
-          name: Run Test
-          command: bin/rails test
+      # - run:
+      #     name: Run Test
+      #     command: bin/rails test
 
       - run:
           name: Rails Test
